# QssCreator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  qssdpreprocessor.cpp  qssdpreprocessor.h  rpm-package.cmake  version.h.in  win-package.cmake
forms/: findreplacedialog.ui  mainwindow.ui  widgetspreview.ui
resources/: res.qrc
src/: documentfile.h  documentoperations.cpp  documentoperations.h  findreplacedialog.cpp  findreplacedialog.h  findreplacedialog.ui  idocumentfile.cpp  idocumentfile.h  iqssdeditor.cpp  iqssdeditor.h  iqssdfileoperations.cpp  iqssdfileoperations.h  iqssdpreprocessor.cpp  iqssdpreprocessor.h  iqssdprocessor.cpp  iqssdprocessor.h  iqssdvariablesmodel.cpp  iqssdvariablesmodel.h  iuserdialogs.cpp  iuserdialogs.h  main.cpp  mainwindow.cpp  mainwindow.h  qssdeditor.cpp  qssdeditor.h  qssdfileoperations.cpp  qssdfileoperations.h  qssdpreprocessor.cpp  qssdpreprocessor.h  qssdprocessor.cpp  qssdprocessor.h  qssdsyntaxhighlighter.cpp  qssdsyntaxhighlighter.h  qssdvariable.cpp  qssdvariable.h  qssdvariableitemdelegate.cpp  qssdvariableitemdelegate.h  qssdvariablesmodel.cpp  qssdvariablesmodel.h  stylesheeteditor.cpp  (+5 more)
tests/: CMakeLists.txt  tst_documentoperations.cpp  tst_findreplacedialog.cpp  tst_mainwindow.cpp  tst_mockabstractlistmodel.h  tst_mockdocumentfile.h  tst_mockqssdeditor.cpp  tst_mockqssdeditor.h  tst_mockqssdfileoperations.h  tst_mockqssdpreprocessor.h  tst_mockqssdprocessor.h  tst_mockqssdvariablesmodle.h  tst_mockuserdialogs.h  tst_qssdeditor.cpp  tst_qssdfileoperations.cpp  tst_qssdpreprocessor.cpp  tst_qssdprocessor.cpp  tst_qssdvariable.cpp  tst_qssdvariablesmodel.cpp  tst_stylesheeteditor.cpp
